[package]
name = "trie-rs"
version = "0.1.3"
description = "Memory efficient trie (prefix tree) library based on LOUDS"
readme = "README.md"
edition = "2018"

[dependencies]
rayon = "1.0"

[dev-dependencies]
criterion = "0.2"
rand = "0.6"
lazy_static = "1.3"

[[bench]]
name = "bench"
harness = false
